err/sorter.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/configparser'...
Listing './lib/python3.5/site-packages/configparser-3.5.0.egg-info'...
Listing './lib/python3.5/site-packages/media'...
Compiling './lib/python3.5/site-packages/media/Media.py'...
***   File "./lib/python3.5/site-packages/media/Media.py", line 77
    print "\n" + self.newpath + " already exists."
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/media/sorter.py'...
***   File "./lib/python3.5/site-packages/media/sorter.py", line 11
    print "Utilizzo: [nome cartella di origine]* nome cartella di destinazione"
                                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyPdf'...
Compiling './lib/python3.5/site-packages/pyPdf/generic.py'...
***   File "./lib/python3.5/site-packages/pyPdf/generic.py", line 102
    raise utils.PdfReadError, "error reading null object"
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyPdf/pdf.py'...
***   File "./lib/python3.5/site-packages/pyPdf/pdf.py", line 655
    raise Exception, "file has not been decrypted"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyPdf/utils.py'...
***   File "./lib/python3.5/site-packages/pyPdf/utils.py", line 77
    raise TypeError, "sequence indices must be integers"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyPdf-1.13.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sorter-0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
